30 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/ng-matero/theme/sidemenu/accordion.directive.ts:
 * clarin-angular/src/app/ng-matero/core/bootstrap/menu.service.ts: Fixes in
 ng-matero to respect the /app prefix in sidemenu.

29 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/toolbar-widget/toolbar-widget.component.html:
 * clarin-angular/src/app/components/controls/toolbar-widget/toolbar-widget.component.ts:
 Change to emmit event to parent, on some toolbar buttons (i.e. Change
 Collection).

 * clarin-angular/src/app/components/dialogs/add-custom-value-modal/add-custom-value-modal.component.html:
 * clarin-angular/src/app/components/dialogs/rename-collection-modal/rename-collection-modal.component.html:
 * clarin-angular/src/app/components/dialogs/select-document-modal/select-document-modal.component.html:
 * clarin-angular/src/app/components/dialogs/share-collection-modal/share-collection-modal.component.html:
 * clarin-angular/src/app/components/views/add-collection/add-collection.component.html:
 * clarin-angular/src/app/components/views/annotation/annotation.component.html:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json:
 * clarin-angular/src/css/clarin-material.scss: Various cosmetic changes.

 * clarin-angular/src/app/components/dialogs/confirm-dialog/confirm-dialog.component.html:
 Message is placed in [innerHTML], so dialog message can now contain HTML
 tags.

 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
 * clarin-angular/src/css/clarin-material.scss: Implemented Document(s)
 selection/delete in Collection Management.

28 July 2021 Petasis George <petasis@iit.demokritos.gr>: