@@ -1,4 +1,4 @@
-<page-header *ngIf="showPageHeader"></page-header>
+<page-header title="{{'pageheader.Add New Collection'|translate}}" *ngIf="showPageHeader"></page-header>
 <div class="collection-add-wrapper">
   <as-split direction="horizontal" style="height: 100%;">
     <as-split-area order="1" [visible]="showMyCollections" [size]="30" [minSize]="10" [maxSize]="60"
