@@ -1,4 +1,4 @@
-<page-header></page-header>
+<page-header title="{{'pageheader.Manage Collections'|translate}}"></page-header>
 <div class="manage-collections-wrapper">
   <as-split direction="horizontal">
     <as-split-area [size]="30" [minSize]="10" [maxSize]="60" class="side-bar-wrapper">
