@@ -1,5 +1,4 @@
-<page-header></page-header>
-<breadcrumb></breadcrumb>
+<page-header title="{{'pageheader.Dashboard'|translate}}"></page-header>
 <div class="matero-row" fxLayout="row wrap">
 
   <!-- Statistics -->
